--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Manifest will be injected by Vite PWA plugin -->
   </head>
   <body>
-    <notention-app></notention-app>
-    <script type="module" src="/main.ts"></script>
+    <div id="app"></div>
+    <script type="module" src="/main-rewrite.ts"></script>
   </body>
 </html>
